[package]
name = "testbin-spawner"
version = "0.0.0"
edition = "2021"
publish = false

# Windows-only dep: we use `running_process_core::spawn_daemon` on Windows
# so the sleeper grandchildren inherit ONLY the three NUL stdio handles
# we resolve here, via `PROC_THREAD_ATTRIBUTE_HANDLE_LIST`. On Unix we
# stay on bare `std::process::Command::spawn` (with NULL stdio) because
# our sanitized spawn calls `setpgid(0, 0)` in the child, which would
# break the containment test's `killpg(spawner_pgid, SIGKILL)` cleanup
# on macOS (Linux has PR_SET_PDEATHSIG as a backstop; macOS does not).
# See zackees/running-process#115.
[target.'cfg(windows)'.dependencies]
running-process-core = { path = "../../crates/running-process-core" }
