[package]
name = "running-process-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]
members = ["."]

[dependencies]
libfuzzer-sys = "0.4"
prost = "0.14"
running-process = { path = "..", features = ["client"] }

[[bin]]
name = "fuzz_frame_decode"
path = "fuzz_targets/fuzz_frame_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_hello_decode"
path = "fuzz_targets/fuzz_hello_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_helloreply_decode"
path = "fuzz_targets/fuzz_helloreply_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_cache_manifest_decode"
path = "fuzz_targets/fuzz_cache_manifest_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_service_def_decode"
path = "fuzz_targets/fuzz_service_def_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_framing_read"
path = "fuzz_targets/fuzz_framing_read.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_probe_framing_read"
path = "fuzz_targets/fuzz_probe_framing_read.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_probe_identity_decode"
path = "fuzz_targets/fuzz_probe_identity_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_admin_decode"
path = "fuzz_targets/fuzz_admin_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_handoff_decode"
path = "fuzz_targets/fuzz_handoff_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pipe_name_parse"
path = "fuzz_targets/fuzz_pipe_name_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_service_name_validate"
path = "fuzz_targets/fuzz_service_name_validate.rs"
test = false
doc = false
bench = false
